# DungeonMindServer

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  .gitmodules  CardGenerator_Design_Document.md  CardGenerator_System_Refresh_Document.md  CardGenerator_Visual_Refresh_Document.md  DUNGEONMIND_STORAGE_SYS.md  Dockerfile  DungeonMind_Architecture_Overview.md  DungeonMind_Object_Structure.md  MMS_ROUTER_DOCUMENTATION.md  README.md  Session_Progress_Report_2025_01_26.md  TODO.md  app.py  asset-manifest.json  auth_router.py  auth_service.py  buildDM.sh  cert.pem  checksums_main_compressed.txt  checksums_main_uncompressed.txt  checksums_storegenerator_compressed.txt  checksums_storegenerator_uncompressed.txt  compressimages.sh  config_development.py  config_production.py  dependencies.py  deploy.sh  deploylocal.sh  dev.sh  dev_server.py  docker-compose.yml  dungeonmind.net  env.example  extractimages.sh  index.html  jest.config.js  (+16 more)
.VSCodeCounter/2024-12-17_21-13-16/: details.md  diff-details.md  diff.md  results.csv  results.json  results.md
.VSCodeCounter/2024-12-17_21-16-02/: details.md  diff-details.md  diff.md  results.csv  results.json  results.md
.cursor/: settings.json
DungeonMindServer/: app.py
cardgenerator/: CardGenerator_Design_Document.md  card_generator.py  card_generator_new.py  cardgenerator_router.py  prompts.py  prompts_legacy.py  test_new_pipeline.py
cardgenerator/config/: __init__.py  layout_config.py
cardgenerator/core/: __init__.py  asset_manager.py  card_renderer.py  image_composer.py  text_processor.py
cardgenerator/prompts/: __init__.py  prompt_manager.py
cardgenerator/services/: __init__.py  asset_service.py  card_generation_service.py  image_management_service.py
cardgenerator/utils/: __init__.py  error_handler.py
cloudflare/: handle_images.py
cloudflareR2/: cloudflareR2_utils.py  r2_config.py
database/: __init__.py  dungeonmind_objects_db.py
dungeonmind.egg-info/: PKG-INFO
firestore/: firebase_config.py  firestore_utils.py
models/: __init__.py  dungeonmind_objects.py  session_models.py
routers/: __init__.py  asset_router.py  auth_router.py  card_generation_router.py  cardgenerator_compatibility_router.py  cardgenerator_project_router.py  cardgenerator_router.py  global_objects_router.py  global_session_router.py  image_management_router.py  ruleslawyer_router.py  session_router.py  statblock_pages_router.py  statblockgenerator_router.py  store_router.py
ruleslawyer/: ruleslawyer_helper.py
sms/: sms_router.py
statblockgenerator/: StatBlockGenerator_Design_Document.md  __init__.py  statblock_generator.py
statblockgenerator/models/: __init__.py  statblock_models.py
statblockgenerator/prompts/: __init__.py  statblock_prompts.py
static/: index.html
static/css/: main.bc78b7de.css  main.bc78b7de.css.map  style.css
static/js/: 453.0530a65a.chunk.js  main.3fc47861.js  main.3fc47861.js.map
static/root_store/Enchanted_Roots_Gear_Emporium/: Enchanted_Roots_Gear_Emporium.json
static/storegenerator/css/: storeUI.css
static/storegenerator/scripts/: blockBuilder.js  eventHandlers.js  loadingImage.js  saveLoadHandler.js  utils.js
storegenerator/: store_router.py
storegenerator/static/scripts/: main.js  (+8 more)
templates/: index.html  storeUI.html
tests/: _cloudflare.py  conftest.py  firestore_utils.py  google_oauth.py  test_auth.py  test_cloudflare.py  test_firebase.py  test_firestore.py  test_phase1_global_system.py  test_store_router.py
tests/cloudflareR2/: _cloudflareR2.py  _r2_config.py  r2_config.py  store.html
tests/firestore/: test_firestore.py
tests/rulesLawyer/: rulesLawyer_helper.py  rulesLawyer_router.py  test_bot_response.py  test_embedding_loader.py
tests/session_managment/: test_session_management.py
tests/sms/: generate_curl.py  test_sms_webhook.py
tests/statblockgenerator/: README.md  conftest.py  pytest.ini  run_tests.py  test_live_generation.py  test_performance_comparison.py  test_save_project.py  test_statblock_structured_outputs.py
(+2 files in other folders)
