[tool.poetry]
name = "dungeonmind"
version = "0.2.0"
description = "Foundation API server for DungeonMind projects"
authors = ["Alan Meigs <alan.meigs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
fal-client = "^0.5.6"
itsdangerous = "^2.2.0"
authlib = "^1.3.2"
python-dotenv = "^1.0.1"
openai = "^1.53.0"
uvicorn = "^0.32.0"
google-cloud-firestore = "^2.19.0"
firebase-admin = "^6.6.0"
python-multipart = "^0.0.17"
boto3 = "^1.35.58"
pdf2image = "^1.17.0"




[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
